# crush-rs

./: .gitignore  Cargo.toml  OVERVIEW.md  README.md  SETUP.md  SETUP_CN.md  config.example.json  crush.json
.github/workflows/: release.yml
src/: cli.rs  config.rs  llm.rs  lsp.rs  main.rs  mcp.rs  session.rs  tools.rs
src/providers/: anthropic.rs  deepseek.rs  gemini.rs  kimi.rs  mod.rs  ollama.rs  openai.rs
